# emc2101-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
examples/nucleo-l476rg-hal2/: Cargo.toml  memory.x
examples/nucleo-l476rg-hal2/.cargo/: config.toml
examples/nucleo-l476rg-hal2/src/: lib.rs
src/: error.rs  lib.rs
