[package]
name = "emc2101"
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["no-std", "embedded-hal-driver", "sensor", "temperature", "fan"]
description = "Rust embedded-hal-async driver for the EMC2101 temperature sensor and fan sensor/controler."
repository = "https://github.com/Georges760/emc2101-rs"

[dependencies]
defmt = { version = "0.3.2", optional = true }
embedded-hal = { version = "0.2.7", optional = true }
embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
fugit = "0.3.6"
maybe-async-cfg = "0.2.3"

[features]
defmt = ["dep:defmt", "fugit/defmt"]
async = ["dep:embedded-hal-async"]
blocking = ["dep:embedded-hal"]
default = ["blocking"]
