[package]
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Platform-agnostic Rust driver for the EMC2101 temperature sensor and fan sensor/controler."
documentation = "https://docs.rs/emc2101"
edition = "2021"
keywords = ["no-std", "embedded-hal-driver", "sensor", "temperature", "fan"]
license = "MIT OR Apache-2.0"
name = "emc2101"
repository = "https://github.com/Georges760/emc2101-rs"
rust-version = "1.71.1"
version = "0.4.0"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
fugit = "0.3"
heapless = "0.8"
log = { version = "0.4", optional = true }
maybe-async-cfg = "0.2"

[features]
async = ["dep:embedded-hal-async"]
core-error = []                                              # bump MSRV to 1.81.0
default = ["sync"]
defmt-03 = ["dep:defmt", "fugit/defmt", "heapless/defmt-03"]
sync = ["dep:embedded-hal"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = [
  "eh1",
] }
